Switched over to a "distribute" based project, added stub for Python 3 support.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [build_sphinx]
-source-dir = docs/
-build-dir  = docs/build
+source-dir = doc
+build-dir  = doc/build
 all_files  = 1
 
 [upload_sphinx]
-upload-dir = docs/build/html
+upload-dir = doc/build/html
