--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,8 @@
 source-dir = doc
 build-dir  = doc/build
 all_files  = 1
+version = 0.1.5
+release = 0.1.5
 
 [upload_sphinx]
 upload-dir = doc/build/html
