All required files are installed in site-packages, including docs.  Tested with pip.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 include *.txt
 recursive-include doc *.rst
+recursive-include doc *.png
+recursive-include doc *.py
 recursive-include oct2py *.m
 recursive-include example *.m
