--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,8 @@
 [build_sphinx]
 source-dir = doc
-build-dir  = doc/build
 all_files  = 1
 version = 0.1.5
 release = 0.1.5
 
 [upload_sphinx]
-upload-dir = doc/build/html
+upload-dir = build/lib/oct2py/doc
