Final changes prior to upload of 0.1.5.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ recursive-include doc *.rst
 recursive-include doc *.png
 recursive-include doc *.py
 recursive-include oct2py *.m
-recursive-include example *.m
+recursive-include example *.*
