All tests pass, MAT file is created in HOME dir to avoid R/O errors.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ lib/model/doctrine/base/Base*
 lib/model/doctrine/*Plugin/base/Base*
 lib/model/om/*
 lib/model/map/*
+*.wpr
+*.wpu
+*.pyc
+.coverage
