--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [build_sphinx]
 source-dir = doc
-all_files  = 1
+all_files = 1
 version = 0.3
 release = 0.3.2
 
 [upload_sphinx]
-upload-dir = build/lib/oct2py/doc
+upload-dir = build/lib/oc2py/doc
+
