Fixed temp mat file removal, pre-release cleanup.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 include *.txt
+include *.rst
+include Makefile
 recursive-include doc *.rst
 recursive-include doc *.png
 recursive-include doc *.py
@@ -7,7 +9,7 @@ recursive-include example *.m
 recursive-include example *.py
 recursive-include numpydoc *.py
 recursive-include licenses *.txt
-prune .hg
+prune .git
 prune doc/build
 prune dist
 prune build
