--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
     - 3.2
 
 install:
-    - sudo apt-get python-dev libatlas-base-dev liblapack-dev
+    - sudo apt-get install python-dev libatlas-base-dev liblapack-dev
     - pip install numpy scipy
     - python setup.py install
 
