--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 
 install:
     - sudo apt-get install python-dev libatlas-base-dev liblapack-dev
-    - sudo apt-get install gfortran octave-core
+    - sudo apt-get install gfortran octave-3.2
     - pip install numpy scipy
     - python setup.py install
 
