BUG: fix octave package name

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 
 install:
     - sudo apt-get install python-dev libatlas-base-dev liblapack-dev
-    - sudo apt-get install gfortran octave-3.2
+    - sudo apt-get install gfortran octave3.2
     - pip install numpy
     - python -c "import numpy.distutils.core"
     - pip install scipy
