--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,26 @@
+# vim ft=yaml
 # travis-ci.org definition for oct2py build
-language: python
+#
+# We pretend to be erlang because we need can't use the python support in
+# travis-ci; it uses virtualenvs, they do not have numpy, and scipy,
+# and it is impractical to build them
 
-python:
-    - 2.7
-    - 3.2
-
+language: erlang
+env:
+    - PYTHON=python PYSUF=''
+    - PYTHON=python3 PYSUF=3
 install:
-    - sudo apt-get install python-dev libatlas-base-dev liblapack-dev
-    - sudo apt-get install gfortran octave3.2
-    - pip install numpy
-    - python -c "import numpy.distutils.core"
-    - pip install scipy
-    - python setup.py install
-
+    - sudo apt-get install $PYTHON-dev
+    - sudo apt-get install $PYTHON-numpy
+    - sudo apt-get install $PYTHON-scipy
+    - sudo apt-get install $PYTHON-setuptools
+    - sudo apt-get install $PYTHON-nose
+    - sudo apt-get install octave3.2
+    - $PYTHON setup.py build
+    - sudo $PYTHON setup.py install
 script:
-    - nosetests oct2py
+    # Change into an innocuous directory and find tests from installation
+    - mkdir for_test
+    - cd for_test
+    - nosetests --exe -v --cover-package=oct2py oct2py
+
