--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
     - PYTHON=python PYSUF=''
     - PYTHON=python3 PYSUF=3
 install:
+    - sudo apt-get update
     - sudo apt-get install $PYTHON-numpy
     - sudo apt-get install $PYTHON-scipy
     - sudo apt-get install $PYTHON-setuptools
