Another attempt to fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ script:
     # Change into an innocuous directory and find tests from installation
     - cd ~
     - nosetests-$PYSUF --exe -v --cover-package=oct2py oct2py
-    - iptest -v IPython.extensions.tests.test_octavemagic
+    - if [ "$PYSUF" = 2.7 ]; then iptest -v IPython.extensions.tests.test_octavemagic; fi
 
