initial commit of coveralls, update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
-cache/*
-log/*
-web/uploads/*
-config/databases.yml
-config/propel.ini
-data/sql/*
-lib/filter/doctrine/base/Base*
-lib/filter/doctrine/*Plugin/base/Base*
-lib/form/doctrine/base/Base*
-lib/form/doctrine/*Plugin/base/Base*
-lib/model/doctrine/base/Base*
-lib/model/doctrine/*Plugin/base/Base*
-lib/model/om/*
-lib/model/map/*
-*.wpr
-*.wpu
 *.pyc
 .coverage
+MANIFEST
+.spyderproject
+oct2py.egg-info/*
+build/*
+dist/*
+oct2py/version.py
