Updated travis to use coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,11 @@ install:
     - sudo pip install ipython[test]
     - sudo apt-get install octave
     - sudo $PYTHON setup.py install
+    - pip install coveralls
 script:
     # Change into an innocuous directory and find tests from installation
     - cd ~
     - nosetests-$PYSUF --exe -v --cover-package=oct2py oct2py
     - if [ "$PYSUF" = 2.7 ]; then iptest -v IPython.extensions.tests.test_octavemagic; fi
-
+after_success:
+    coveralls
