--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,16 @@ language: python
 python:
   - 2.7
   - 3.2
-  - 3.3
 virtualenv:
   system_site_packages: true
 before_install:
-  - sudo apt-get install -qq python-numpy python-scipy octave
+  - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then sudo apt-get install -qq python-numpy python-scipy; fi"
+  - "if [[ $TRAVIS_PYTHON_VERSION == '3.2' ]]; then sudo apt-get install -qq python3-numpy python3-scipy; fi"
+  - sudo apt-get install -qq octave
 install:
   - pip install coveralls --use-mirrors
-  - pip install nose --use-mirrors
   - pip install coverage --use-mirrors
+  - pip install ipython[test]
   - python setup.py install
 script:
   - nosetests -v --with-coverage --cover-package=oct2py
