--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 install:
   - pip install coveralls --use-mirrors
   - pip install coverage --use-mirrors
-  - pip install ipython[test]
+  - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install ipython[test]; fi"
   - python setup.py install
 script:
   - nosetests -v --with-coverage --cover-package=oct2py
