--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ before_install:
   - sudo apt-get install -qq octave
 install:
   - pip install coveralls --use-mirrors
-  - pip install coverage --use-mirrors
   - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install ipython[test]; fi"
   - python setup.py install
 script:
-  - nosetests -v --with-coverage --cover-package=oct2py
+script:
+  - coverage run --source=oct2py setup.py test
   - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then iptest -v IPython.extensions.tests.test_octavemagic; fi"
 after_success:
   coveralls
