--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,18 @@ python:
 virtualenv:
   system_site_packages: true
 before_install:
-  - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then sudo apt-get install -qq python-numpy python-scipy; fi"
-  - "if [[ $TRAVIS_PYTHON_VERSION == '3.2' ]]; then sudo apt-get install -qq python3-numpy python3-scipy; fi"
+  - PY=$TRAVIS_PYTHON_VERSION
+  - "if [[ $PY == '2.7' ]]; then sudo apt-get install -qq python-numpy python-scipy; fi"
+  - "if [[ $PY == '3.2' ]]; then sudo apt-get install -qq python3-numpy python3-scipy; fi"
   - sudo apt-get install -qq octave
 install:
   - pip install coveralls --use-mirrors
-  - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install ipython[test]; fi"
+  - "if [[ $PY == '2.7' ]]; then pip install ipython[test]; fi"
   - python setup.py install
 script:
 script:
-  - coverage run --source=oct2py setup.py test
-  - "if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then iptest -v IPython.extensions.tests.test_octavemagic; fi"
+  - PY=%TRAVIS_PYTHON_VERSION
+  - coverage run test_runner.py
+  - "if [[ $PY == '2.7' ]]; then iptest -v IPython.extensions.tests.test_octavemagic; fi"
 after_success:
   coveralls
