Update manifest to include docs

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,15 +1,15 @@
 include *.txt
 include *.rst
 include Makefile
-recursive-include doc *.rst
-recursive-include doc *.png
-recursive-include doc *.py
+recursive-include docs *.rst
+recursive-include docs *.png
+recursive-include docs *.py
 recursive-include oct2py *.m
 recursive-include example *.m
 recursive-include example *.py
 recursive-include numpydoc *.py
 recursive-include licenses *.txt
 prune .git
-prune doc/build
+prune docs/build
 prune dist
 prune build
