--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - "if [[ $PY == '2.7' ]]; then pip install ipython[test]; fi"
 script:
   - PY=%TRAVIS_PYTHON_VERSION
-  - coverage run --source oct2py -m py.test
+  - coverage run --source oct2py -m py.test -v
   - coverage report
   - "if [[ $PY == '2.7' ]]; then iptest -v IPython.extensions.tests.test_octavemagic; fi"
 after_success:
