--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ install:
   - pip install coveralls --use-mirrors
   - pip install pytest --use-mirrors
   - "if [[ $PY == '2.7' ]]; then pip install ipython[test]; fi"
+  - "if [[ $PY == '3.3' ]]; then pip-3.3 install ipython[test]; fi"
 script:
   - PY=%TRAVIS_PYTHON_VERSION
   - coverage run --source oct2py -m py.test -v
   - coverage report
-  - "if [[ $PY == '2.7' ]]; then iptest -v IPython.extensions.tests.test_octavemagic; fi"
 after_success:
   coveralls
