--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,12 @@ virtualenv:
   system_site_packages: true
 before_install:
   - PY=$TRAVIS_PYTHON_VERSION
-  - "if [[ $PY == '2.7' ]]; then sudo apt-get install -qq python-numpy python-scipy; fi"
-  - "if [[ $PY == '3.2' ]]; then sudo apt-get install -qq python3-numpy python3-scipy; fi"
+  - "if [[ $PY == '2.7' ]]; then sudo apt-get install -qq python-numpy python-scipy ipython; fi"
+  - "if [[ $PY == '3.2' ]]; then sudo apt-get install -qq python3-numpy python3-scipy ipython3; fi"
   - sudo apt-get install -qq octave
 install:
   - pip install coveralls --use-mirrors
   - pip install pytest --use-mirrors
-  - "if [[ $PY == '2.7' ]]; then pip install ipython[test]; fi"
-  - "if [[ $PY == '3.2' ]]; then pip-3.2 install ipython[test]; fi"
 script:
   - PY=%TRAVIS_PYTHON_VERSION
   - coverage run --source oct2py -m py.test -v
