--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - pip install pytest --use-mirrors
 script:
   - PY=%TRAVIS_PYTHON_VERSION
-  - coverage run --source oct2py -m py.test -v
+  - coverage run --source oct2py -m py.test -v -s
   - coverage report
 after_success:
   coveralls
