--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ before_install:
   - "if [[ $PY == '3.2' ]]; then sudo apt-get install -qq python3-numpy python3-scipy ipython3; fi"
   - sudo apt-get install -qq octave
 install:
-  - pip install coveralls --use-mirrors
-  - pip install pytest --use-mirrors
+  - "if [[ $PY == '2.7' ]]; pip install coveralls  pytest--use-mirrors; fi"
 script:
   - PY=%TRAVIS_PYTHON_VERSION
-  - coverage run --source oct2py -m py.test -v -s
-  - coverage report
+  - "if [[ $PY == '2.7' ]]; then coverage run --source oct2py -m py.test -v; fi;"
+  - "if [[ $PY == '2.7' ]]; then coverage report; fi;"
+  - "if [[ $PY == '3.2' ]]; then nosetests; fi"
 after_success:
   coveralls
