--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,51 @@
 # travis-ci.org definition for oct2py build
 
+# After changing this file, check it on:
+#   http://lint.travis-ci.org/
+
+
 language: python
+
 python:
-  - 2.7
-  - 3.2
+    - 2.6
+
+matrix:
+    include:
+        - python: 2.7
+          env:
+            - PYTHON=python
+            - PYVER=2.x
+        - python: 3.2
+          env:
+            - PYTHON=python3
+            - PYVER=3.x
+    exclude:
+        - python: 2.6
+
 virtualenv:
-  system_site_packages: true
+    system_site_packages: true
+
 before_install:
-  - PY=$TRAVIS_PYTHON_VERSION
-  - "if [[ $PY == '2.7' ]]; then sudo apt-get install -qq python-numpy python-scipy ipython; fi"
-  - "if [[ $PY == '3.2' ]]; then sudo apt-get install -qq python3-numpy python3-scipy ipython3; fi"
-  - sudo apt-get install -qq octave
-install:
-  - "if [[ $PY == '2.7' ]]; then pip install coveralls  pytest --use-mirrors; fi"
+    - export DISPLAY=:99.0
+    - sh -e /etc/init.d/xvfb start
+
+    - sudo apt-get update
+    - sudo apt-get install $PYTHON-numpy
+    - sudo apt-get install $PYTHON-scipy
+    
+    - if [[ $PYVER == '2.x' ]]; then
+    -   sudo apt-get install ipython
+    - fi
+    - if [[ $PYVER == '3.x' ]]; then
+    -   sudo apt-get install ipython3
+    - fi
+
+    - pip install --use-mirrors nose-cov
+    - pip install --use-mirrors python-coveralls
+
 script:
-  - PY=%TRAVIS_PYTHON_VERSION
-  - "if [[ $PY == '2.7' ]]; then coverage run --source oct2py -m py.test -v; fi;"
-  - "if [[ $PY == '2.7' ]]; then coverage report; fi;"
-  - "if [[ $PY == '3.2' ]]; then nosetests; fi"
+    # Run all tests
+    - nosetests --exe -v --with-doctest --with-cov --cov oct2py --cov-config .coveragerc oct2py
+
 after_success:
-  coveralls
+    - coveralls
