--- a/.travis.yml
+++ b/.travis.yml
@@ -34,19 +34,17 @@ before_install:
     - sudo apt-get install $PYTHON-scipy
     - sudo apt-get install -qq octave
     
-    - if [[ $PYVER == '2.x' ]]; then
-    -   sudo apt-get install ipython
-    - fi
-    - if [[ $PYVER == '3.x' ]]; then
-    -   sudo apt-get install ipython3
-    - fi
-
+    - pip install --use-mirrors ipython
     - pip install --use-mirrors nose-cov
     - pip install --use-mirrors python-coveralls
+    
+ install:
+   - python setup.py install
 
 script:
+    - cd
     # Run all tests
-    - nosetests --exe -v --with-doctest --with-cov --cov oct2py --cov-config .coveragerc oct2py
+    - nosetests --exe -v --with-doctest --with-cov --cov oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
 
 after_success:
     - coveralls
