--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,13 @@ install:
 script:
     - cd
     # Run all tests
-    - nosetests --exe -v --with-doctest --with-cov --cov oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
+    - if [[ $PYVER == '2.x' ]]; then
+    -     nosetests --exe -v --with-doctest --with-cov --cov oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
+    - fi
+    - if [[ $PYVER == '3.x' ]]; then
+    -     nosetests --exe -v ---with-cov --cov oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
+    - fi
+    
 
 after_success:
     - coveralls
