Add ipython notebook to example

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,6 +7,7 @@ recursive-include docs *.py
 recursive-include oct2py *.m
 recursive-include example *.m
 recursive-include example *.py
+recursive-include example *.ipynb
 recursive-include numpydoc *.py
 recursive-include licenses *.txt
 prune .git
