--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,10 @@ before_install:
     -     pip install --use-mirrors nose-cov
     -     pip install --use-mirrors python-coveralls
     - fi
+
+    - if [[ $PYVER == '3.x' ]]; then
+          pip install --use-mirrors pexpect
+    - fi
       
 install:
    - python setup.py install
