--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_install:
     - if [[ $PYVER == '2.x' ]]; then
     -     pip install --use-mirrors nose-cov
     -     pip install --use-mirrors python-coveralls
-          pip install --use-mirrors pexpect
+    -     pip install --use-mirrors pexpect
     - fi
       
 install:
