--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,6 @@ before_install:
     - if [[ $PYVER == '2.x' ]]; then
     -     pip install --use-mirrors nose-cov
     -     pip install --use-mirrors python-coveralls
-    -     pip install --use-mirrors pexpect
     - fi
       
 install:
@@ -54,6 +53,8 @@ script:
     - if [[ $PYVER == '3.x' ]]; then
     -     nosetests --exe -v oct2py
     - fi
+    - pip install --use-mirrors pexpect
+    - nosetests --exe -v oct2py
     
 
 after_success:
