Add pexpect test to travis again

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,8 +55,7 @@ script:
     -     nosetests --exe -v oct2py
     -     pip install --use-mirrors pexpect-u
     - fi
-    - pip install -U nose
-    - pip install pexpect
+    - nosetests --exe -v oct2py
     
 
 after_success:
