--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,11 @@ matrix:
           env:
             - PYTHON=python
             - PYVER=2.x
-        - python: 3.2
+        - python: 3.3
+		  env:
+            - PYTHON=python3
+            - PYVER=3.x
+        - python: 3.4
           env:
             - PYTHON=python3
             - PYVER=3.x
