--- a/.travis.yml
+++ b/.travis.yml
@@ -3,59 +3,48 @@
 # After changing this file, check it on:
 #   http://lint.travis-ci.org/
 
-
+# http://conda.pydata.org/docs/travis.html
 language: python
-
 python:
-    - 2.6
+  # We don't actually use the Travis Python, but this keeps it organized.
+  - "2.7"
+  - "3.3"
+  - "3.4"
 
-matrix:
-    include:
-        - python: 2.7
-          env:
-            - PYTHON=python
-            - PYVER=2.x
-        - python: 3.3
-		  env:
-            - PYTHON=python3
-            - PYVER=3.x
-        - python: 3.4
-          env:
-            - PYTHON=python3
-            - PYVER=3.x
-    exclude:
-        - python: 2.6
-
-virtualenv:
-    system_site_packages: true
-
-before_install:
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
-
-    - sudo apt-get update
-    - sudo apt-get install $PYTHON-numpy
-    - sudo apt-get install $PYTHON-scipy
-    - sudo apt-get install -qq octave
+install:
+  - sudo apt-get update
+  - # You may want to periodically update this, although the conda update
+  -   # conda line below will keep everything up-to-date.
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+  -      # This saves us some downloading for this version
+  -      wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+  -    else
+  -      wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+  -    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+  - conda create -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy IPython
+  - source activate test-environment
+  - sudo apt-get install -qq octave
     
-    - pip install --use-mirrors ipython
-    
-    - if [[ $PYVER == '2.x' ]]; then
+    - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then
     -     pip install --use-mirrors nose-cov
     -     pip install --use-mirrors python-coveralls
     - fi
-      
-install:
-   - python setup.py install
+  - python setup.py install
 
 script:
     - cd
     # Run all tests
-    - if [[ $PYVER == '2.x' ]]; then
+    - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then
     -     nosetests --exe -v --with-doctest --with-cov --cov oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
     -     pip install --use-mirrors pexpect
-    - fi
-    - if [[ $PYVER == '3.x' ]]; then
+    - else
     -     nosetests --exe -v oct2py
     -     pip install --use-mirrors pexpect-u
     - fi
