--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ python:
   - "3.4"
 
 install:
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+  - if [[ $TRAVIS_PYTHON_VERSION == "2.7" ]]; then
   -    sudo apt-get update
   - else
   -    sudo apt-add-repository ppa:octave/stable
