--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
   - python setup.py install
 
 script:
-    - cd
+    - which nosetests
     # Run all tests
     - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
     -     nosetests --exe -v --with-doctest --with-cov --cov oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
