--- a/.travis.yml
+++ b/.travis.yml
@@ -35,14 +35,13 @@ install:
   - conda update conda
   # Useful for debugging any issues with conda
   - conda info -a
-  - conda create -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy IPython
+  - conda create -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy IPython nose
   - source activate test-environment
 
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
   -     pip install --use-mirrors nose-cov
   -     pip install --use-mirrors python-coveralls
   - fi
-  - pwd
   - python setup.py install
 
 script:
