--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ script:
     - which nosetests
     # Run all tests
     - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-    -     nosetests --exe -v --with-doctest --with-cov --cov oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
+    -     nosetests --exe -v --with-doctest --with-cov --cover-package oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
     -     pip install --use-mirrors pexpect
     - else
     -     nosetests --exe -v oct2py
