--- a/.travis.yml
+++ b/.travis.yml
@@ -32,22 +32,23 @@ install:
   - conda info -a
   - conda create -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy IPython nose
   - source activate test-environment
-
+  - which pip
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-  -     pip install --use-mirrors nose-cov
-  -     pip install --use-mirrors python-coveralls
+  -     pip install nose-cov
+  -     pip install python-coveralls
   - fi
   - python setup.py install
 
 script:
     - which nosetests
+    - which pip
     # Run all tests
     - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
     -     nosetests --exe -v --with-doctest --with-cov --cover-package oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
-    -     pip install --use-mirrors pexpect
+    -     pip install pexpect
     - else
     -     nosetests --exe -v oct2py
-    -     pip install --use-mirrors pexpect-u
+    -     pip install pexpect-u
     - fi
     - nosetests --exe -v oct2py
 
