--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,22 @@ python:
   - "3.4"
 
 install:
-  - sudo apt-get update
-  - sudo apt-get install octave
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+  -   sudo apt-add-repository -y ppa:picaso/octave; true
+  -   sudo apt-get update
+  -   sudo apt-get install octave liboctave-dev
+  - else
+  -   sudo apt-get update
+  -   sudo apt-get install octave
+  - fi
 
   - # You may want to periodically update this, although the conda update
   -   # conda line below will keep everything up-to-date.
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-  -      # This saves us some downloading for this version
+        # This saves us some downloading for this version
   -      wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
-  -    else
-  -      wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+  - else
+  -      wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh; true
   - fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
