--- a/.travis.yml
+++ b/.travis.yml
@@ -12,23 +12,13 @@ python:
   - 3.4
 
 install:
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-  -   sudo apt-add-repository -y ppa:picaso/octave; true
-  -   sudo apt-get update
-  -   sudo apt-get install octave liboctave-dev
-  - else
-  -   sudo apt-get update
-  -   sudo apt-get install octave
-  - fi
+  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then sudo apt-add-repository -y ppa:picaso/octave; true; fi
+  -  sudo apt-get update
+  -  sudo apt-get install octave liboctave-dev
 
   - # You may want to periodically update this, although the conda update
   -   # conda line below will keep everything up-to-date.
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-        # This saves us some downloading for this version
-  -      wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
-  - else
-  -      wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh; true
-  - fi
+  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh; else wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh; fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
@@ -39,10 +29,7 @@ install:
   - conda create -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy IPython nose pip
   - source activate test-environment
   - which pip
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-  -     pip install nose-cov
-  -     pip install python-coveralls
-  - fi
+  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then pip install nose-cov; pip install python-coveralls; fi
   - python setup.py install
 
 script:
