--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,20 @@ python:
   - 3.4
 
 install:
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then sudo apt-add-repository -y ppa:picaso/octave; true; fi
-  - sudo apt-get update
-  - sudo apt-get install octave liboctave-dev; true
+  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
+      sudo apt-add-repository -y ppa:picaso/octave
+      sudo apt-get update
+      sudo apt-get install octave liboctave-dev
+    else
+      sudo apt-get update
+      sudo apt-get install octave
 
-  - # You may want to periodically update this, although the conda update
-  -   # conda line below will keep everything up-to-date.
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh; else wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh; fi
+  # You may want to periodically update this, although the conda update
+  # conda line below will keep everything up-to-date.
+  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
+      wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+    else wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh
+    fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
@@ -29,7 +36,10 @@ install:
   - conda create -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy IPython nose pip
   - source activate test-environment
   - which pip
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then pip install nose-cov; pip install python-coveralls; fi
+  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
+        pip install nose-cov
+        pip install python-coveralls
+    fi
   - python setup.py install
 
 script:
@@ -37,12 +47,12 @@ script:
     - which pip
     # Run all tests
     - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-    -     nosetests --exe -v --with-doctest --with-cov --cover-package oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
-    -     pip install pexpect
-    - else
-    -     nosetests --exe -v oct2py
-    -     pip install pexpect-u
-    - fi
+         nosetests --exe -v --with-doctest --with-cov --cover-package oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
+         pip install pexpect
+     else
+         nosetests --exe -v oct2py
+         pip install pexpect-u
+     fi
     - nosetests --exe -v oct2py
 
 
