travis yet again 14

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,19 +13,20 @@ python:
 
 install:
   - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-      sudo apt-add-repository -y ppa:picaso/octave
-      sudo apt-get update
-      sudo apt-get install octave liboctave-dev
+      sudo apt-add-repository -y ppa:picaso/octave;
+      sudo apt-get update;
+      sudo apt-get install octave liboctave-dev;
     else
-      sudo apt-get update
-      sudo apt-get install octave
+      sudo apt-get update;
+      sudo apt-get install octave;
     fi
 
   # You may want to periodically update this, although the conda update
   # conda line below will keep everything up-to-date.
   - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
       wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
-    else wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh
+    else
+      wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh;
     fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
@@ -38,8 +39,8 @@ install:
   - source activate test-environment
   - which pip
   - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-        pip install nose-cov
-        pip install python-coveralls
+        pip install nose-cov;
+        pip install python-coveralls;
     fi
   - python setup.py install
 
@@ -48,11 +49,11 @@ script:
     - which pip
     # Run all tests
     - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-         nosetests --exe -v --with-doctest --with-cov --cover-package oct2py --cov-config blink1073/oct2py/.coveragerc oct2py
-         pip install pexpect
+         nosetests --exe -v --with-doctest --with-cov --cover-package oct2py --cov-config blink1073/oct2py/.coveragerc oct2py;
+         pip install pexpect;
      else
-         nosetests --exe -v oct2py
-         pip install pexpect-u
+         nosetests --exe -v oct2py;
+         pip install pexpect-u;
      fi
     - nosetests --exe -v oct2py
 
