--- a/.travis.yml
+++ b/.travis.yml
@@ -5,29 +5,11 @@
 
 # http://conda.pydata.org/docs/travis.html
 language: python
-python:
-  # We don't actually use the Travis Python, but this keeps it organized.
-  - 2.7
-  - 3.3
-  - 3.4
 
 install:
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-      sudo apt-add-repository -y ppa:picaso/octave;
-      sudo apt-get update;
-      sudo apt-get install octave liboctave-dev;
-    else
-      sudo apt-get update;
-      sudo apt-get install octave;
-    fi
-
-  # You may want to periodically update this, although the conda update
-  # conda line below will keep everything up-to-date.
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-      wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
-    else
-      wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh;
-    fi
+  - sudo apt-get update;
+    sudo apt-get install octave;
+  - wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
@@ -35,28 +17,35 @@ install:
   - conda update conda
   # Useful for debugging any issues with conda
   - conda info -a
-  - conda create -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy IPython nose pip
-  - source activate test-environment
-  - which pip
-  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-        pip install nose-cov;
-        pip install python-coveralls;
-    fi
-  - python setup.py install
 
 script:
-    - which nosetests
-    - which pip
-    # Run all tests
-    - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then
-         nosetests --exe -v --with-doctest --with-cov --cover-package oct2py --cov-config blink1073/oct2py/.coveragerc oct2py;
-         pip install pexpect;
-     else
-         nosetests --exe -v oct2py;
-         pip install pexpect-u;
-     fi
-    - nosetests --exe -v oct2py
-
+  # run with baseline numpy, scipy and Octave versions
+  - conda create -n py27 numpy scipy IPython nose pip
+  - source activate py27
+  - python setup.py install
+  - pushd ..
+  - nosetests --exe -v --with-doctest --with-cov --cover-package oct2py --cov-config blink1073/oct2py/.coveragerc oct2py;
+  - source deactivate
+  - popd
+  # upgrade Octave to 3.6
+  - sudo apt-add-repository -y ppa:picaso/octave;
+    sudo apt-get update;
+    sudo apt-get install octave liboctave-dev;
+    # run with python 3.3
+  - conda create -n py33 python=3.3 numpy scipy IPython nose pip
+  - source activate py33
+  - python setup.py install
+  - pushd ..
+  - nosetests --exe -v
+  - source deactivate
+  # run with python 3.4
+  - conda create -n py34 python=3.4 numpy scipy IPython nose pip
+  - source activate py34
+  - python setup.py install
+  - pushd ..
+  - nosetests --exe -v
+  - source deactivate
+  - popd
 
 after_success:
     - coveralls
