--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ script:
   # run with baseline numpy, scipy and Octave versions
   - conda create -n py27 numpy scipy IPython nose pip
   - source activate py27
+  - pip install coverage
   - python setup.py install
   - pushd ..
   - nosetests --exe -v --with-doctest --with-cov --cover-package oct2py --cov-config blink1073/oct2py/.coveragerc oct2py;
@@ -38,6 +39,7 @@ script:
   - pushd ..
   - nosetests --exe -v
   - source deactivate
+  - popd
   # run with python 3.4
   - conda create -n py34 python=3.4 numpy scipy IPython nose pip
   - source activate py34
