--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@
 language: python
 
 install:
-  - sudo apt-get update;
-    sudo apt-get install octave;
+  - sudo apt-get update -qq;
+    sudo apt-get install -qq octave;
   - wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
-  - conda config --set always_yes yes --set changeps1 no
+  - conda config --set always_yes yes
   - conda update conda
   # Useful for debugging any issues with conda
   - conda info -a
