--- a/.travis.yml
+++ b/.travis.yml
@@ -6,53 +6,51 @@
 # http://conda.pydata.org/docs/travis.html
 language: python
 
-install:
+env:
+    - CONDA="python=2.6 numpy=1.6 scipy=0.11"
+    - CONDA="python=2.7 numpy scipy"
+    - CONDA="python=3.3 numpy scipy"
+    - CONDA="python=3.4 numpy scipy"
+
+before_install:
   - sudo apt-get update -qq;
     sudo apt-get install -qq octave;
-  - wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+  - wget http://repo.continuum.io/miniconda/Miniconda-3.5.5-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes
   - conda update conda
-  # Useful for debugging any issues with conda
   - conda info -a
-  - conda install numpy scipy IPython nose pip coverage
-  - conda create -n py26 python=2.6 numpy=1.6.2 scipy=0.11.0 IPython nose
-  - conda create -n py33 python=3.3 scipy IPython nose
-  - conda create -n py34 python=3.4 scipy IPython nose
+  - conda create -n test $CONDA IPython nose pip coverage"
+  - source activate test
+  - pip install coveralls
+
+install:
+  - export PYTHONWARNINGS=all
+  - python setup.py install
 
 script:
-  - export PYTHONWARNINGS="d"; 
-  # run with oldest python, numpy, scipy and Octave versions
-  - source activate py26
-  - python setup.py install -q
-  - pushd ..
   - nosetests -v --exe oct2py
-  - popd
   # upgrade Octave to 3.6
   - sudo apt-add-repository -y ppa:picaso/octave;
     sudo apt-get update -qq;
     sudo apt-get install -qq octave liboctave-dev;
-  # run with default environment and Octave versions - with coverage
-  - source deactivate
-  - python setup.py install -q
-  - pushd ..
-  - nosetests -v --exe --with-doctest --with-cov --cover-package oct2py oct2py
-  - popd
-    # run with python 3.3 
-  - source activate py33
-  - python setup.py install -q
-  - pushd ..
-  - nosetests -v --exe oct2py
-  - source deactivate
-  - popd
-  # run with python 3.4 - without pty
-  - source activate py34
-  - python setup.py install -q
-  - pushd ..
-  - export NO_PTY=1
-  - nosetests --exe -v oct2py
+    # turn off PTY on py3.4 (just for variety)
+  - if [[ $CONDA == "python=3.4*" ]]
+    then
+       export NO_PTY = 1
+    fi
+    # run coverage on py2.7, regular on others
+  - if [[ $CONDA == "python=2.7*" ]]
+    then
+      nosetests -v --exe --with-doctest --with-cov --cover-package oct2py oct2py
+    else
+      nosetests --exe -v -with-doctest oct2py
+    fi
 
 after_success:
-    - coveralls
+    - if [[ $CONDA == "python=2.7*" ]]
+      then
+          coveralls
+      fi
