--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,13 @@ env:
 
 before_install:
   - sudo apt-get update -qq;
-    sudo apt-get install -qq octave;
+  - if [[ $CONDA == "python=2.7*" ]]; then
+        sudo apt-get install -qq octave;
+    else
+        sudo apt-add-repository -y ppa:picaso/octave;
+        sudo apt-get update -qq;
+        sudo apt-get install -qq octave liboctave-dev;
+    fi
   - wget http://repo.continuum.io/miniconda/Miniconda-3.5.5-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
@@ -31,26 +37,18 @@ install:
   - python setup.py install
 
 script:
-  - nosetests -v --exe oct2py
-  # upgrade Octave to 3.6
-  - sudo apt-add-repository -y ppa:picaso/octave;
-    sudo apt-get update -qq;
-    sudo apt-get install -qq octave liboctave-dev;
     # turn off PTY on py3.4 (just for variety)
-  - if [[ $CONDA == "python=3.4*" ]]
-    then
+  - if [[ $CONDA == "python=3.4*" ]]; then
        export NO_PTY = 1
     fi
     # run coverage on py2.7, regular on others
-  - if [[ $CONDA == "python=2.7*" ]]
-    then
+  - if [[ $CONDA == "python=2.7*" ]]; then
       nosetests -v --exe --with-doctest --with-cov --cover-package oct2py oct2py
     else
       nosetests --exe -v -with-doctest oct2py
     fi
 
 after_success:
-    - if [[ $CONDA == "python=2.7*" ]]
-      then
+    - if [[ $CONDA == "python=2.7*" ]]; then
           coveralls
       fi
