Run with and without PTY on all versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,16 +38,15 @@ install:
   - cd
 
 script:
-    # turn off PTY on py3.4 (just for variety)
-  - if [[ $CONDA == python=3.4* ]]; then
-       export NO_PTY=1;
-    fi
     # run coverage on py2.7, regular on others
   - if [[ $CONDA == python=2.7* ]]; then
       nosetests -v --exe --with-doctest --with-cov --cover-package oct2py oct2py;
     else
       nosetests --exe -v oct2py;
     fi
+
+  # turn off PTY and run again
+  - export NO_PTY=1; nosetests --exe -v oct2py;
 
 after_success:
     - if [[ $CONDA == python=2.7* ]]; then
