--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ before_install:
   - conda config --set always_yes yes
   - conda update conda
   - conda info -a
-  - travis_retry conda create -n test $CONDA IPython nose pip coverage
+  - travis_retry conda create -n test $CONDA IPython pip
   - source activate test
-  - travis_retry pip install python-coveralls
+  - travis_retry pip install python-coveralls nose-cov
 
 install:
   - export PYTHONWARNINGS=all
