--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
   - conda config --set always_yes yes
   - conda update conda
   - conda info -a
-  - travis_retry conda create -n test $CONDA IPython pip
+  - travis_retry conda create -n test $CONDA IPython nose pip
   - source activate test
   - travis_retry pip install python-coveralls nose-cov
 
