--- a/.coveragerc
+++ b/.coveragerc
@@ -1,1 +1,1 @@
-[run]source = oct2py
+# Configuration for coverage.py[run]branch = Truesource = oct2pyinclude = */oct2py/*omit =    */setup.py[report]exclude_lines =    def __repr__    if __name__ == .__main__.:
