--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,11 @@ before_install:
 install:
   - export PYTHONWARNINGS=all
   - python setup.py install
-  - cd
 
 script:
     # run coverage on py2.7, regular on others
   - if [[ $CONDA == python=2.7* ]]; then
-      nosetests --exe -v --with-doctest --with-cov --cover-package oct2py oct2py;
+      nosetests --exe -v --with-doctest --with-cov --cover-package oct2py;
     else
       nosetests --exe -v oct2py;
     fi
