--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@
 language: python
 
 env:
-    - CONDA="python=2.7 numpy=1.7.1 scipy=0.12"
+    - CONDA="python=2.7 numpy=1.7"
     - CONDA="python=3.3 numpy scipy"
     - CONDA="python=3.4 numpy scipy"
 
@@ -23,7 +23,10 @@ before_install:
   - conda config --set always_yes yes
   - conda update conda
   - conda info -a
-  - travis_retry conda create -n test $CONDA IPython pip nose
+  - travis_retry conda create -n test $CONDA IPython pip nose binstar
+  - if [[ $CONDA == python=2.7* ]]; then
+     conda install --channel https://conda.binstar.org/moorepants/channel/main/linux-64 scipy=0.9.0;
+     fi
   - source activate test
   - travis_retry pip install coveralls
 
