--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ before_install:
   - conda config --set always_yes yes
   - conda update conda
   - conda info -a
-  - travis_retry conda create -n test $CONDA IPython pip nose binstar
+  - travis_retry conda create -n test $CONDA IPython pip nose
+  - conda config --add channels http://conda.binstar.org/moorepants
   - if [[ $CONDA == python=2.7* ]]; then
      conda install --channel https://conda.binstar.org/moorepants/channel/main/linux-64 scipy=0.9.0;
      fi
