--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@
 language: python
 
 env:
-    - CONDA="python=2.7 numpy=1.7"
+    - CONDA="python=2.7"
     - CONDA="python=3.3 numpy scipy"
     - CONDA="python=3.4 numpy scipy"
 
