--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@
 language: python
 
 env:
-    - CONDA="python=2.7"
-    - CONDA="python=3.3 numpy scipy"
-    - CONDA="python=3.4 numpy scipy"
+    - CONDA="python=2.7 numpy=1.7"
+    - CONDA="python=3.3 numpy"
+    - CONDA="python=3.4 numpy"
 
 before_install:
   - sudo apt-add-repository -y ppa:picaso/octave;
@@ -22,11 +22,7 @@ before_install:
   - conda config --set always_yes yes
   - conda update conda
   - conda info -a
-  - travis_retry conda create -n test $CONDA IPython pip nose binstar
-  - conda config --add channels http://conda.binstar.org/moorepants
-  - if [[ $CONDA == python=2.7* ]]; then
-     conda install scipy=0.9.0;
-     fi
+  - travis_retry conda create -n test $CONDA IPython pip nose scipy
   - source activate test
   - travis_retry pip install coveralls
 
