Make sure we can build docs without warning

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ script:
     else
       nosetests --exe -v oct2py;
     fi
+  - export SPHINXOPTS=-W
+  - cd docs; make html
 
 after_success:
     - coveralls
