Better handling of doc building

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,7 @@ script:
     else
       nosetests --exe -v oct2py;
     fi
-  - pip install sphinx
-  - export SPHINXOPTS=-W
-  - cd docs; make html
+  - make docs
 
 after_success:
     - coveralls
