--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,16 @@
 
 # http://conda.pydata.org/docs/travis.html
 language: python
-sudo: false
-addons:
-  apt:
-    packages:
-      - octave
-      - octave-doc
+
 env:
     - CONDA="python=2.7 numpy=1.7"
     - CONDA="python=3.3 numpy"
     - CONDA="python=3.4 numpy"
 
 before_install:
+  - sudo apt-add-repository -y ppa:picaso/octave;
+  - sudo apt-get update -qq;
+  - sudo apt-get install -qq octave liboctave-dev;
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
   - export PATH="$HOME/miniconda/bin:$PATH"
