--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
   - conda config --set always_yes yes
   - conda update conda
   - conda info -a
-  - travis_retry conda create -n test $CONDA IPython pip nose scipy
+  - travis_retry conda create -n test $CONDA jupyter nose scipy
   - source activate test
   - travis_retry pip install coveralls
 
