Try increasing the scipy version

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@
 language: python
 
 env:
-    - CONDA="python=2.7 numpy=1.11.7 scipy=0.17.0"
-    - CONDA="python=3.4 numpy"
+    - CONDA="python=2.7 scipy=0.17.0"
+    - CONDA="python=3.4 numpy scipy"
 
 before_install:
   - sudo apt-add-repository -y ppa:picaso/octave;
@@ -21,7 +21,7 @@ before_install:
   - conda config --set always_yes yes
   - conda update conda
   - conda info -a
-  - travis_retry conda create -n test $CONDA jupyter nose scipy pip
+  - travis_retry conda create -n test $CONDA jupyter nose pip
   - source activate test
   - travis_retry pip install coveralls
 
